feat: add describe webview for StorageClass resources
- Add StorageClassDescribeProvider and storageclass-describe webview
- Tabs: Overview, Metadata, Parameters, Usage, Events
- Wire into DescribeWebview, tsconfig, and webpack

--- a/src/webview/tsconfig.json
+++ b/src/webview/tsconfig.json
@@ -17,7 +17,8 @@
     "./pv-describe/**/*",
     "./secret-describe/**/*",
     "./service-describe/**/*",
-    "./configmap-describe/**/*"
+    "./configmap-describe/**/*",
+    "./storageclass-describe/**/*"
   ]
 }
 
