feat(port-forward): integrate Service port forwarding into management UI
- Update TreeItemFactory to show resource type (pod/ vs service/) in labels
- Update tooltips to display Pod vs Service for port forward items
- Update viewPortForwardPod to show correct resource message (Pod vs Service)
- Rename "View Pod" menu to "View Resource" for port forward context menu

Issue #108

--- a/package.json
+++ b/package.json
@@ -270,7 +270,7 @@
       },
       {
         "command": "kube9.viewPortForwardPod",
-        "title": "View Pod",
+        "title": "View Resource",
         "category": "kube9"
       },
       {
